github action run test

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,7 +39,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
+      - name: run test
+        run: |
+          ls
+
       - name: run main
         run: |
           python main.py
